completed people template

--- a/assets/theme-styles.css
+++ b/assets/theme-styles.css
@@ -1307,7 +1307,7 @@ a.value-cta{
     /* PEOPLE */
     
     .people-container{
-        justify-content: space-between;
+        justify-content: center;
     }
     
 }
