--- a/assets/theme-styles.css
+++ b/assets/theme-styles.css
@@ -478,8 +478,9 @@ a.service-menu-item{
     margin: 0 0 3em 0;
 }
 
-.sub-service-icon{
+.sub-service-icon img{
     margin-right: 1em;
+    height: auto;
     width: 3em;
     opacity: 0.7;
 }
@@ -1104,7 +1105,7 @@ a.value-cta{
         width: 30%;
     }
     
-    .sub-service-icon{
+    .sub-service-icon img{
         margin-bottom: 0.8em;
     }
     
