--- a/assets/theme-styles.css
+++ b/assets/theme-styles.css
@@ -180,7 +180,7 @@ html{
 
 /* SWIPER (Homepage slideshow banner) */
 
-.swiper-container {
+.swiper-container-header {
     height: 30vh;
     margin-left: auto;
     margin-right: auto;
@@ -250,7 +250,7 @@ html{
     font-family: 'Roboto Condensed', sans-serif;
     font-size: 1.6rem;
     font-weight: 400;
-    margin-bottom: 1.7em;
+    margin-bottom: 1.4em;
     text-align: center;
     text-transform: uppercase;
 }
@@ -411,6 +411,23 @@ a.service-menu-item{
 
 /* TESTIMONIALS */
 
+.swiper2{
+    margin: 0 auto;
+    width: 80%;
+}
+
+.swiper2-slide{
+    margin-bottom: 2em;
+}
+
+.swiper-pagination{
+    margin-top: 10em;
+}
+
+.swiper-pagination-bullet{
+    background-color: #555;
+}
+
 .testimonial-section{
     background-color: #EBEBEB;
 }
@@ -464,6 +481,14 @@ a.service-menu-item{
     margin-top: 0.2em;
 }
 
+/* TESTIMONIAL SWIPER */
+
+/*
+.swiper-container-testimonials {
+      width: 100%;
+      height: 100%;
+    }
+*/
 /* SERVICE PAGE */
 
 .section-service-blurb{
@@ -886,7 +911,7 @@ a.value-cta{
         width: 2em;
     }
     
-    .swiper-container{
+    .swiper-container-header{
         min-height: 17em;
         max-height: none;
     }
@@ -1037,7 +1062,7 @@ a.value-cta{
 
 @media only screen and (min-width: 768px){
     
-    .swiper-container{
+    .swiper-container-header{
         min-height: 20em;
     }
     
@@ -1177,6 +1202,11 @@ a.value-cta{
     
     /*  TESTIMONIALS  */
     
+    .swiper-container-2{
+        height: 100%;
+        width: 100%;
+    }
+    
     .testimonial-container{
         display: flex;
         justify-content: center;
@@ -1203,7 +1233,7 @@ a.value-cta{
         margin: 0 0.5em 0.5em 0;
     }
     
-    .swiper-container{
+    .swiper-container-header{
         min-height: 30em;
     }
     
@@ -1566,7 +1596,7 @@ a.value-cta{
 
 @media only screen and (min-width: 1500px){
     
-    .swiper-container, .banner-image{
+    .swiper-container-header, .banner-image{
         min-height: 30em;
     }
     
@@ -1606,7 +1636,7 @@ a.value-cta{
         font-size: 1.2em;
     }
     
-    .swiper-container, .banner-image{
+    .swiper-container-header, .banner-image{
         min-height: 45em;
     }
     
