--- a/assets/theme-styles.css
+++ b/assets/theme-styles.css
@@ -391,9 +391,13 @@ a.page-cta{
     max-width: 400px;
 }
 
+.service-menu{
+    margin: 0 auto 0 auto;
+}
+
 .service-menu-item{
     display: block;
-    margin-bottom: 2.5em;
+    margin: 0 auto 2.5em auto;
     max-width: 200px;
 }
 
@@ -495,12 +499,6 @@ a.service-menu-item{
 
 /* TESTIMONIAL SWIPER */
 
-/*
-.swiper-container-testimonials {
-      width: 100%;
-      height: 100%;
-    }
-*/
 /* SERVICE PAGE */
 
 .section-service-blurb{
@@ -1114,7 +1112,6 @@ a.value-cta{
     .service-menu{
         display: flex;
             align-items: center;
-        margin: 0 auto 0 auto;
         max-width: 800px;
         height: 9em;
     }
