--- a/assets/theme-styles.css
+++ b/assets/theme-styles.css
@@ -292,6 +292,10 @@ img.logo{
     width: 100%;
 }
 
+.banner-title-small{
+    font-size: 1.2em;
+}
+
 .section-title{
     font-family: 'Roboto Condensed', sans-serif;
     margin: 1em auto 1em auto;
@@ -304,7 +308,7 @@ img.logo{
 }
 
 .section-margin{
-    margin: 2em auto;
+    margin: 1em auto 1.5em auto;
     width: 90%;
 }
 
@@ -990,6 +994,10 @@ a.value-cta{
     .service-menu-item{
         margin: 3em auto 0 auto;
     }
+    
+    .banner-title-small{
+        font-size: 1.4;
+    }
 }
 
 @media only screen and (min-width: 600px){
@@ -1597,6 +1605,10 @@ a.value-cta{
     }
     
     /* PAGE FEATURES */
+    
+    .section-margin{
+        margin: 4em auto 6em auto;
+    }
     
     .banner-text{
         padding: 1.8em 8em;
