added testimonial arrows

--- a/assets/theme-styles.css
+++ b/assets/theme-styles.css
@@ -459,6 +459,10 @@ a.service-menu-item{
     background-color: #555;
 }
 
+.testimonial-swiper-button{
+    display: none;
+}
+
 .testimonial-box{
     border-bottom: 1px solid #D4D4D4;
     width: 100%;
@@ -1656,6 +1660,10 @@ a.value-cta{
     
     /*  TESTIMONIALS  */
     
+    .testimonial-section{
+        position: relative;
+    }
+    
     .testimonial-heading{
         font-size: 2em;
     }
@@ -1665,8 +1673,26 @@ a.value-cta{
     }
     
     .testimonial-swiper-button{
-/*        background-size: 18px 30px;*/
+        display: inherit;
+    }
+    
+    .custom-swiper-button-next, .custom-swiper-button-prev{
+        cursor: pointer;
+        height: 44px;
         opacity: 0.5;
+        position: absolute;
+        top: 50%;
+        width: 27px;
+    }
+    
+    .custom-swiper-button-next{
+        background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg%20xmlns%3D'http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg'%20viewBox%3D'0%200%2027%2044'%3E%3Cpath%20d%3D'M27%2C22L27%2C22L5%2C44l-2.1-2.1L22.8%2C22L2.9%2C2.1L5%2C0L27%2C22L27%2C22z'%20fill%3D'%23000000'%2F%3E%3C%2Fsvg%3E");
+        right: 5%;
+    }
+    
+    .custom-swiper-button-prev{
+        background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg%20xmlns%3D'http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg'%20viewBox%3D'0%200%2027%2044'%3E%3Cpath%20d%3D'M0%2C22L22%2C0l2.1%2C2.1L4.2%2C22l19.9%2C19.9L22%2C44L0%2C22L0%2C22L0%2C22z'%20fill%3D'%23000000'%2F%3E%3C%2Fsvg%3E");
+        left: 5%;
     }
     
     /* SERVICE PAGE */
