--- a/assets/theme-styles.css
+++ b/assets/theme-styles.css
@@ -20,6 +20,11 @@ h2{
     margin: 2em 0 1em 0;
 }
 
+h3{
+    font-size: 1.3em;
+    margin-bottom: 0.3em;
+}
+
 p{
     margin-bottom: 1em;
 }
@@ -685,6 +690,74 @@ a.value-cta{
     text-transform: uppercase;
 }
 
+/* BLOG */
+    
+    .blog-section{
+        margin: 0 auto;
+        width: 90%;
+    }
+
+    .blog-card{
+        border-radius: 10px;
+        box-shadow: 0 2px 4px 0 rgba(0,0,0,0.1),0 6px 20px 0 rgba(0,0,0,0.1);
+        margin-bottom: 2em;
+        position: relative;
+    }
+    
+    .blog-card-image-container{
+        display: inline-block;
+        border-top-left-radius: 10px;
+        border-top-right-radius: 10px;
+        height: 170px;
+        overflow: hidden;
+        width: 100%;
+    }
+
+    .blog-card-image{
+        display: block;
+        width: 100%;
+        object-fit: cover;
+        transform: scale(1);
+        transition: 0.5s;
+    }
+
+    .blog-card:hover .blog-card-image{
+            transform: scale(1.1);
+    }
+    
+    .blog-card-content{
+        padding: 1em;
+    }
+    
+    .blog-card-content a{
+        color: inherit;
+        text-decoration: none;
+    }
+    
+    .blog-card-date{
+        color: #888;
+        font-size: 0.8em;
+    }
+
+    .blog-card-description{
+        margin-bottom: 2em;
+    }
+    
+    .blog-card-read-more{
+        position: absolute;
+        left: 1em;
+        bottom: 1em;
+    }
+
+    a.blog-card-read-more{
+            color: #2EA3F2;
+    }
+
+    a.blog-card-read-more:hover{
+        font-weight: 600;
+    }
+
+
 /* CONTACT */
 
 .success-modal-wrapper{
@@ -1274,6 +1347,45 @@ a.value-cta{
         max-width: 600px;
     }
     
+    /* BLOG */
+    
+    .blog-section{
+        display: flex;
+            justify-content: space-between;
+        width: 80%;
+    }    
+
+    .blog-row {
+        display: flex;
+            flex-flow: row wrap;
+            justify-content: flex-start;
+    }
+
+    .blog-card{
+        box-sizing: border-box;
+        flex-basis: calc(50% - 14px);
+        margin: 0 7px 1em 7px;
+    }
+    
+    .blog-card-image-container{
+        height: 200px;
+    }
+    
+    .blog-card-content{
+        padding: 1em;
+    }
+    
+    .blog-card-date{
+        color: #888;
+        font-size: 0.8em;
+    }
+    
+    .blog-card-read-more{
+        position: absolute;
+        left: 1em;
+        bottom: 1em;
+    }
+    
     /* CONTACT */
 
     .modal-text{
@@ -1731,6 +1843,33 @@ a.value-cta{
     
     .section-careers-blurb{
         margin: 2em auto;
+    }
+    
+    /* BLOG */
+    
+    .blog-section{
+        display: flex;
+            justify-content: space-between;
+        width: 80%;
+    }
+
+    .blog-card{
+        flex-basis: calc(33.3% - 14px);
+    }
+    
+    .blog-card-content{
+        padding: 1em;
+    }
+    
+    .blog-card-date{
+        color: #888;
+        font-size: 0.8em;
+    }
+    
+    .blog-card-read-more{
+        position: absolute;
+        left: 1em;
+        bottom: 1em;
     }
     
     /* FOOTER */
