--- a/assets/theme-styles.css
+++ b/assets/theme-styles.css
@@ -21,8 +21,9 @@ h2{
 }
 
 h3{
-    font-size: 1.3em;
-    margin-bottom: 0.3em;
+    font-size: 1.5em;
+    font-weight: 400;
+    margin: 1.2em 0 0.5em 0;
 }
 
 p{
@@ -692,71 +693,92 @@ a.value-cta{
 
 /* BLOG */
     
-    .blog-section{
-        margin: 0 auto;
-        width: 90%;
-    }
+.blog-section{
+    margin: 0 auto;
+    width: 90%;
+}
 
-    .blog-card{
-        border-radius: 10px;
-        box-shadow: 0 2px 4px 0 rgba(0,0,0,0.1),0 6px 20px 0 rgba(0,0,0,0.1);
-        margin-bottom: 2em;
-        position: relative;
-    }
-    
-    .blog-card-image-container{
-        display: inline-block;
-        border-top-left-radius: 10px;
-        border-top-right-radius: 10px;
-        height: 170px;
-        overflow: hidden;
-        width: 100%;
-    }
+.blog-card{
+    border-radius: 10px;
+    box-shadow: 0 2px 4px 0 rgba(0,0,0,0.1),0 6px 20px 0 rgba(0,0,0,0.1);
+    margin-bottom: 2em;
+    position: relative;
+}
 
-    .blog-card-image{
-        display: block;
-        width: 100%;
-        object-fit: cover;
-        transform: scale(1);
-        transition: 0.5s;
-    }
+.blog-card-image-container{
+    display: inline-block;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    height: 170px;
+    overflow: hidden;
+    width: 100%;
+}
 
-    .blog-card:hover .blog-card-image{
-            transform: scale(1.1);
-    }
-    
-    .blog-card-content{
-        padding: 1em;
-    }
-    
-    .blog-card-content a{
-        color: inherit;
-        text-decoration: none;
-    }
-    
-    .blog-card-date{
-        color: #888;
-        font-size: 0.8em;
-    }
+.blog-card-image{
+    display: block;
+    width: 100%;
+    object-fit: cover;
+    transform: scale(1);
+    transition: 0.5s;
+}
 
-    .blog-card-description{
-        margin-bottom: 2em;
-    }
-    
-    .blog-card-read-more{
-        position: absolute;
-        left: 1em;
-        bottom: 1em;
-    }
+.blog-card-image-container:hover .blog-card-image{
+        transform: scale(1.1);
+}
 
-    a.blog-card-read-more{
-            color: #2EA3F2;
-    }
+.blog-card-content{
+    padding: 1em;
+}
 
-    a.blog-card-read-more:hover{
-        font-weight: 600;
-    }
+.blog-card-content a{
+    color: inherit;
+    text-decoration: none;
+}
 
+.blog-card-title{
+    font-size: 1.3em;
+    margin-bottom: 0.3em;
+}
+
+.blog-card-date{
+    color: #888;
+    font-size: 0.8em;
+}
+
+.blog-card-description{
+    margin-bottom: 2em;
+}
+
+.blog-card-read-more{
+    position: absolute;
+    left: 1em;
+    bottom: 1em;
+}
+
+a.blog-card-read-more{
+    color: #2EA3F2;
+    transition: 0.3s;
+}
+
+a.blog-card-read-more:hover{
+    color: #30BAFF;
+}
+
+/* BLOGSINGLE */
+
+.blog-title{
+    font-family: 'Roboto Condensed', sans-serif;
+    font-size: 2em;
+    font-weight: 800;
+    margin-bottom: 0em;
+}
+
+.blog-details{
+    color: #888;
+    margin-top: 1em;
+    margin-bottom: 2em;
+    padding-left: 1em;
+}
 
 /* CONTACT */
 
@@ -1386,6 +1408,12 @@ a.value-cta{
         bottom: 1em;
     }
     
+    /* BLOGSINGLE */
+    
+    .blog-details{
+        padding-left: 1.5em;
+    }
+    
     /* CONTACT */
 
     .modal-text{
@@ -1561,7 +1589,6 @@ a.value-cta{
     }
     
     h2{
-        font-size: 1.7em;
         width: 80%;
     }
     
@@ -1846,30 +1873,15 @@ a.value-cta{
     }
     
     /* BLOG */
-    
-    .blog-section{
-        display: flex;
-            justify-content: space-between;
-        width: 80%;
-    }
 
     .blog-card{
         flex-basis: calc(33.3% - 14px);
     }
     
-    .blog-card-content{
-        padding: 1em;
-    }
+    /* BLOGSINGLE */
     
-    .blog-card-date{
-        color: #888;
-        font-size: 0.8em;
-    }
-    
-    .blog-card-read-more{
-        position: absolute;
-        left: 1em;
-        bottom: 1em;
+    .blog-title{
+        font-size: 3em;
     }
     
     /* FOOTER */
