--- a/assets/theme-styles.css
+++ b/assets/theme-styles.css
@@ -43,7 +43,7 @@ ul{
 }
 
 .text-secondary{
-    color: #666;
+    color: #888;
 }
 
 .centred-content{
@@ -716,10 +716,11 @@ a.value-cta{
 
 .blog-card-image{
     display: block;
-    width: 100%;
+    height: 100%;
     object-fit: cover;
     transform: scale(1);
     transition: 0.5s;
+    width: 100%;
 }
 
 .blog-card-image-container:hover .blog-card-image{
