fixed blog template stying issue

--- a/assets/theme-styles.css
+++ b/assets/theme-styles.css
@@ -717,6 +717,10 @@ a.value-cta{
     width: 90%;
 }
 
+.section-blog-with-banner{
+    margin-top: 2em;
+}
+
 .blog-card{
     border-radius: 10px;
     box-shadow: 0 2px 4px 0 rgba(0,0,0,0.1),0 6px 20px 0 rgba(0,0,0,0.1);
